--- a/assets/stile/stilo.css
+++ b/assets/stile/stilo.css
@@ -7,6 +7,7 @@
 :root {
     --color: rgb(204, 16, 195);
     --background-color: rgb(7, 192, 238);
+    --border: 2px solid rgb(106, 228, 237);
 }
 .logo-navegador{
     display: flex;
@@ -90,18 +91,13 @@ nav a{
 }
 .about2 div{
     display: flex;
-    /* justify-content: space-around; */
     align-items: center;
 }
-.contact1 h1{
+.contact1 {
     color: var(--color);
     display: flex;
-    justify-content: center;
-    /* margin-left: 40rem; */
-}
-.contact1 h2{
-    color: var(--color);
-    margin-left: 37rem;
+    flex-direction: column;
+    align-items: center;
     padding: 1%;
 }
 .contact2 {
@@ -147,20 +143,40 @@ nav a{
 }
 table,tr,th,td {
     font-size: xx-large;
-    border: 2px solid rgb(106, 228, 237);
+    border: var(--border);
     border-collapse: collapse;
     color: var(--color);
     padding: 2rem;
 }
-#cuerpo img{
-    height: 20rem;
-    width: 35rem;
-    padding: 0.7rem;
+#cuerpo{
+    display: flex;
 }
 #cuerpo>div {
     font-size: x-large;
     align-items: center;
     color: var(--color);
     display: flex;
+    flex-direction: column;
     gap: 5rem;
+}
+#cuerpo img{
+    height: 20rem;
+    width: 35rem;
+    display: flex;
+    justify-items: center;
+    padding: 1rem;
+}
+.listas{
+    justify-content: space-around;
+    padding: 3rem;
+}
+.l2{
+    margin-top: 7rem;
+    padding: 5rem;
+}
+.l1{
+    padding: 5rem;
+}
+ul{
+    padding-left: 3rem;
 }
